--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -1,5 +1,5 @@
 {#
-Event - Event dict - see plugin.py
+Event - Event hash - see plugin.py
 Related - Whether we want a button to associate this object with something
 #}
 
