--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -534,6 +534,11 @@ hr.style-one {
     margin-top: -18px;
 }
 
+.suggested-events{
+    background-color: white;
+    margin-bottom: 50px;
+}
+
 .expired_event {
     background:
   /* On "top" */
