--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -10,7 +10,8 @@
 
 {% block page_primary_action %}
 {% if h.check_access('group_create') %}
-{% link_for _('Add workflow'), controller='group', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+{% link_for _('Add workflow'), controller='ckanext.tess.workflow:WorkflowController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+
 {% endif %}
 {% endblock %}
 
