--- a/ckanext/tess/fantastic/joint.css
+++ b/ckanext/tess/fantastic/joint.css
@@ -243,7 +243,6 @@ Do not allow adding new vertices: .connection-wrap { pointer-events: none; }
 */
 #paper {
    position: relative;
-   border: 1px solid gray;
    display: inline-block;
    background: transparent;
    overflow: hidden;
@@ -265,7 +264,8 @@ Do not allow adding new vertices: .connection-wrap { pointer-events: none; }
    box-shadow: inset 0 0 5px black, 2px 2px 1px gray;
    padding: 5px;
    box-sizing: border-box;
-   min-width: 250px;
+   min-width: 200px;
+    min-height: 150px;
    z-index: 2;
 }
 .html-element select,
@@ -274,32 +274,16 @@ Do not allow adding new vertices: .connection-wrap { pointer-events: none; }
    /* Enable interacting with inputs only. */
    pointer-events: auto;
 }
-.html-element button.delete {
-   color: white;
-   border: none;
-   background-color: #C0392B;
-   border-radius: 20px;
-   width: 15px;
-   height: 15px;
-   line-height: 15px;
-   text-align: middle;
-   position: absolute;
-   top: -15px;
-   left: -15px;
-   padding: 0;
-   margin: 0;
-   font-weight: bold;
-   cursor: pointer;
-}
-.html-element button.delete:hover {
-   width: 20px;
-   height: 20px;
-   line-height: 20px;
+
+.html-element button.clone {
+    margin: 5px;
+
 }
 .html-element select {
    position: absolute;
-   right: 2px;
    bottom: 28px;
+    width: 90%;
+    float: left
 }
 .html-element input {
    position: absolute;
@@ -310,6 +294,7 @@ Do not allow adding new vertices: .connection-wrap { pointer-events: none; }
    color: #333;
    padding: 5px;
    height: 16px;
+    width: 90%;
 }
 .html-element label {
    color: #333;
