--- a/ckanext/tess/templates/workflow/snippets/workspace_components.html
+++ b/ckanext/tess/templates/workflow/snippets/workspace_components.html
@@ -4,9 +4,18 @@
         {{ _('Workflows') }}
     </h2>
     <div class="module-content">
-        <I>Library of Components Here</I>
-
-        <div id="legend" style="border: thick;"></div>
+            {% trans %}
+            Add a new workflow stage by clicking the button below.<br>
+            Connect workflow stages together by drag-and-dropping arrows, assign them categories, and write descriptions
+            <br><br>
+            {% endtrans %}
+        <div id="legend" style="border: thick;">
+            <div id="add-new-button" class="btn btn-primary">
+                <i class="icon-plus-sign-alt">
+                    Add New Stage
+                </i>
+            </div>
+        </div>
 
     </div>
 </div>
