--- a/ckanext/tess/templates/workflow/snippets/workspace.html
+++ b/ckanext/tess/templates/workflow/snippets/workspace.html
@@ -6,21 +6,48 @@
 
 <div id="paper">
 </div>
-<div id="save-button" class="btn btn-primary" style="display: none; position: relative; left: 5px;">
-    Save Training Workflow
+
+<hr>
+
+<div class="workflow-options">
+    <div id="save-button" class="btn btn-primary">
+        <i class="icon-save"> Save </i>
+    </div>
+
+    <div id="download-button" class="btn btn-primary">
+        <i class="icon-download-alt"> Download as RO </i>
+    </div>
 </div>
+
 
 <script type="text/javascript">
     $(document).ready(function () {
         $('#add-new-button').click(function() {
-            var el1 = new joint.shapes.html.Element({ position: {x: x_pos, y: y_pos}, size: { width: 170, height: 100 }, select: 'operation' });
+            var el1 = new joint.shapes.html.Element({
+                position: {x: x_pos, y: y_pos},
+                size: { width: 170, height: 100 },
+                select: 'operation',
+                inPorts: ['in1', 'in2'],
+                outPorts: ['out1']
+
+            });
             console.log();
             el1.toFront();
             x_pos = x_pos+20;
             y_pos = y_pos+20;
             graph.addCell(el1);
-            $('#save-button').show();
+            $('.workflow-options').show();
+        }),
+
+                $('#save-button').click(function() {
+                    alert('Saves the workflow in TeSS');
+        }),
+                $('#download-button').click(function() {
+                    alert('Downloads the workflow as JSON, Common Workflow Description, RO etc');
         })
+
+
+
         /*  LOADED FROM TRAINING_WORKFLOWS.JS
             var graph - new joint.dia.Graph;
             var paper - new joint.dia.Paper({ el: $('#paper'), width: 650, height: 400, gridSize: 1, model: graph });
