Added toolbar support for cytoscape.

--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -3,7 +3,7 @@
         <i class="icon-info-sign"></i>
         {{ _('What are workflows?') }}
     </h2>
-    <div class="module-content">
+    <div class="module-content" style="min-height: 600px;">
         <p>
             {% trans %}
             Training workflows are ordered collections of training materials -
