Got rid of bootstrap css from cytoscape workflows as it was messing about with our navigation tabs.

--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -16,7 +16,7 @@
 <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
 <link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
 <link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
 {% block primary_content_inner %}
