Made the workflow diagram and toolbar fit nicely in the main content div.

--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -20,8 +20,8 @@
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
 {% block primary_content_inner %}
-<p>&nbsp;</p>
-<div id="cy" class="cy col-md-7 col-md-offset-1"></div>
+<div>&nbsp;</div>
+<div id="cy" style="float: right; margin-right: 10px;" class="cy col-md-7 col-md-offset-1"></div>
 {% endblock %}
 {% endblock %}
 
