--- a/ckanext/tess/public/workflows-cytoscape.css
+++ b/ckanext/tess/public/workflows-cytoscape.css
@@ -39,6 +39,8 @@
             }
             /* cytoscape graph */
             .cy {
-                height: 500px;
+                min-height: 500px;
+                max-height: 1000px;
+                width: 650px;
                 background-color: #f9f9f9;
             }
