Fixed the link to the local js file.

--- a/ckanext/tess/templates/workflow/index-old.html
+++ b/ckanext/tess/templates/workflow/index-old.html
@@ -11,7 +11,7 @@
 {% resource 'tess/workflows.js' %}
 
 <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
-<link href="/workflow.css" rel="stylesheet" type="text/css" />
+<link href="/workflows.css" rel="stylesheet" type="text/css" />
 <div id="cy"></div>
 {% endblock %}
 
