Added new button to save workflows and a bit more styling.

--- a/ckanext/tess/templates/workflow/snippets/workflow-helper.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-helper.html
@@ -3,7 +3,7 @@
         <i class="icon-info-sign"></i>
         {{ _('Creating workflows') }}
     </h2>
-    <div id="instructions" class="module-content col-md-4">
+    <div id="instructions" style="padding: 0 5px;" class="module-content col-md-4">
         <ul id="adding-nodes-links">
             <h4>Adding nodes and links</h4>
             <li>Click on <i class="fa fa-plus"></i> in the toolbar to select the <em>Add node</em> tool</li>
