--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -8,7 +8,14 @@
 
 {% block page_header %}{% endblock %}
 
-{% block primary_content %}
+
+{% block page_primary_action %}
+  {% if h.check_access('group_create') %}
+    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+  {% endif %}
+{% endblock %}
+
+{% block primary_content_inner %}
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
@@ -19,10 +26,8 @@
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-{% block primary_content_inner %}
-<div>&nbsp;</div>
-<div id="cy" style="float: right; margin-right: 10px;" class="cy col-md-7 col-md-offset-1"></div>
-{% endblock %}
+<!--<div>&nbsp;</div>-->
+<div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
 {% endblock %}
 
 {% block secondary_content %}
