Moved the workflow creation into new page and created the landing workflow index page.

--- a/ckanext/tess/templates/workflow/snippets/helper.html
+++ b/ckanext/tess/templates/workflow/snippets/helper.html
@@ -6,10 +6,15 @@
     <div class="module-content">
         <p>
             {% trans %}
-            Training workflows are ordered collections of training materials -
-            they represent a series of steps that need to be undertaken in order
-            to perform a certain analysis, e.g. structure prediction, homology modelling,
+            Training workflows are collections of training materials
+            that people need to familiarise themselves with in order to
+            learn about a certain analysis or process, e.g. structure prediction, homology modelling,
             protein ligand docking, MS-based metabolomic analysis, etc.
+        </p>
+        <p>
+            Similar to steps in the actual analysis, these collections of materials
+            are organized in a particular order, so people can follow this predefined order
+            or can skip steps they are already familiar with and dive into steps they want to learn more about.
             {% endtrans %}
         </p>
     </div>
