--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -1,35 +1,25 @@
 {% extends "page.html" %}
 
-{% block subtitle %}{{ _('Workflows') }}{% endblock %}
+{% block subtitle %}{{ _("Training workflows") }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Workflows'), controller='group', action='index' %}</li>
+  <li class="active">{{ h.nav_link(_('Training workflows'), controller='package', action='search', highlight_actions = 'new index') }}</li>
 {% endblock %}
 
-{% block page_header %}{% endblock %}
-
-
-{% block page_primary_action %}
-  {% if h.check_access('group_create') %}
-    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
-  {% endif %}
-{% endblock %}
-
-{% block primary_content_inner %}
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
-<script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
-<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
-<link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
-<link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
-<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
-{% resource 'tess/workflows-cytoscape-toolbar.js' %}
-
-<!--<div>&nbsp;</div>-->
-<div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
+{% block primary_content %}
+  <section class="module">
+    <div class="module-content">
+      {% block page_primary_action %}
+        {% if h.check_access('package_create') %}
+          <div class="page_primary_action">
+            <a class="btn btn-primary" href="/workflow/new.html"><i class="icon-plus-sign-alt"></i> Create workflow</a>
+          </div>
+        {% endif %}
+      {% endblock %}
+    </div>
+  </section>
 {% endblock %}
 
 {% block secondary_content %}
-{% snippet "workflow/snippets/workflow-helper.html" %}
+{% snippet "workflow/snippets/helper.html" %}
 {% endblock %}
