--- a/ckanext/tess/templates/workflow/new.html
+++ b/ckanext/tess/templates/workflow/new.html
@@ -1,31 +1,35 @@
-{% resource 'tess/workflows.js' %}
 {% extends "page.html" %}
 
 {% block subtitle %}{{ _('Workflows') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Workflows'), controller='ckanext.tess.workflow:WorkflowController', action='workflows' %}</li>
-/ <li>{% link_for _('New'), controller='ckanext.tess.workflow:WorkflowController', action='new' %}</li>
+<li class="active">{% link_for _('Workflows'), controller='group', action='index' %}</li>
 {% endblock %}
 
-{% block primary_content %}
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'></script>
-<script src='http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js'></script>
-<br><br><br><br><br><br><br><br>
-<span style="text-align: center"><i>Workspace Here</i></span>
-<div id="cy"></div>
+{% block page_header %}{% endblock %}
 
-<br>
+
+{% block page_primary_action %}
+  {% if h.check_access('group_create') %}
+    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+  {% endif %}
 {% endblock %}
 
+{% block primary_content_inner %}
 
-{% block secondary_content %}<div class="module module-narrow module-shallow">
-    <h2 class="module-heading">
-        <i class="icon-cog"></i>
-        {{ _('Workflows') }}
-    </h2>
-    <div class="module-content">
-        <I>Workflow Components Here</I>
-    </div>
-</div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
+<script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
+<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
+<link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
+<link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
+<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
+{% resource 'tess/workflows-cytoscape-toolbar.js' %}
+
+<!--<div>&nbsp;</div>-->
+<div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
+{% endblock %}
+
+{% block secondary_content %}
+{% snippet "workflow/snippets/workflow-helper.html" %}
 {% endblock %}
