--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -62,9 +62,9 @@
                 <div class="faq-content">
                     <h3 class="faq-heading">What is the main difference between the TeSS and GOBLET’s Training Portal?</h3>
                     <div class="faq-answer">
-                        TeSS harvests training information from ELIXIR Nodes and from 3-rd providers, and aggregates that
-                        information according to different ‘views’ (e.g., ELIXIR overview versus Node-specific) -
-                        it does not store training materials locally. The GOBLET Training Portal acts a repository of materials
+                        TeSS harvests training information from ELIXIR Nodes and from 3-rd party providers, and aggregates that
+                        information according to different ‘views’ (e.g., ELIXIR overview versus node-specific) -
+                        it does not store training materials locally. The GOBLET training portal acts a repository of materials
                         and courses, and provides a catalogue of and trainers and course organisers. The primary focus of the TeSS
                         is on ELIXIR resources and Nodes; the principal focus of GOBLET is on its subscribed members and their
                         materials/courses.
