--- a/ckanext/tess/templates/workflow/snippets/workspace.html
+++ b/ckanext/tess/templates/workflow/snippets/workspace.html
@@ -17,6 +17,7 @@
     <div id="download-button" class="btn btn-primary">
         <i class="icon-download-alt"> Download as RO </i>
     </div>
+    <div id="dialog"></div>
 </div>
 
 
@@ -47,7 +48,8 @@
             alert('Saves the workflow in TeSS');
         }),
         $('#download-button').click(function() {
-            alert('Downloads the workflow as JSON, Common Workflow Description, RO etc');
+            $('#dialog').modal('show');
+            /*alert(JSON.stringify(graph));*/
         })
     });
 </script>
