--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -11,144 +11,230 @@
     <section class="module">
         {% block about %}
         {% if g.site_about %}
-            {{ h.render_markdown(g.site_about) }}
+        {{ h.render_markdown(g.site_about) }}
         {% else %}
-        <a name="about"></a><h1>{{ _('About') }}</h1>
+        <a name="about"></a>
+
+        <h1>{{ _('About') }}</h1>
         {% trans %}
         <p>
-            TeSS (ELIXIR Training eSupport System) is <a target="_blank" href="http://www.elixir-europe.org/">ELIXIR's</a> training portal,
+            TeSS (ELIXIR Training eSupport System) is <a target="_blank"
+                                                         href="http://www.elixir-europe.org/">ELIXIR's</a> training
+            portal,
             developed by <a href="http://www.elixir-uk.org/">ELIXIR-UK</a>, for discovering, packaging and linking
-            training resources aggregated from the plethora of fragmented training resources in life sciences. The training resources are provided
+            training resources aggregated from the plethora of fragmented training resources in life sciences. The
+            training resources are provided
             by various ELIXIR nodes across Europe and other training providers world-wide.
         </p>
+
         <p>
-            New technologies are generating huge amounts of life sciences data that scientists now need to transform into new discoveries.
-            The problem is that very few researchers have all the right skills to take advantage of this sudden data bonanza.
+            New technologies are generating huge amounts of life sciences data that scientists now need to transform
+            into new discoveries.
+            The problem is that very few researchers have all the right skills to take advantage of this sudden data
+            bonanza.
         </p>
+
         <p>
-            As part of the pan-European <a target="_blank" href="http://www.elixir-europe.org/">ELIXIR project</a>, <a href="http://www.elixir-uk.org/">ELIXIR-UK</a> is responding to this
-            challenge by taking a UK and European lead in training research scientists in computing, statistics and bioinformatics.
-            By plugging the skills gap we aim to strengthen science across Europe, and will set the agenda for training needs in the future.
+            As part of the pan-European <a target="_blank" href="http://www.elixir-europe.org/">ELIXIR project</a>, <a
+                href="http://www.elixir-uk.org/">ELIXIR-UK</a> is responding to this
+            challenge by taking a UK and European lead in training research scientists in computing, statistics and
+            bioinformatics.
+            By plugging the skills gap we aim to strengthen science across Europe, and will set the agenda for training
+            needs in the future.
         </p>
-        <a name="contact"></a><h2>Contact us</h2>
-        <p>If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>.</p>
+        <a name="contact"></a>
+
+        <h2>Contact us</h2>
+
+        <p>If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>.
+        </p>
+
         <p>You can also email directly one of the following people (in alphabetical order):</p>
         <ul>
-        <li><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS co-investigator @Manchester)</li>
-        <li><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)</li>
-        <li><a href=mailto:a.nenadic@manchester.ac.uk">Aleksandra Nenadic</a> (ELIXIR-UK training coordinator for infrastructure technology and TeSS @Manchester)</li>
-        <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</li>
+            <li><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS
+                co-investigator @Manchester)
+            </li>
+            <li><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)
+            </li>
+            <li><a href=mailto:a.nenadic@manchester.ac.uk">Aleksandra Nenadic</a> (ELIXIR-UK training coordinator for
+                infrastructure technology and TeSS @Manchester)
+            </li>
+            <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</li>
         </ul>
         <a name="faq"> </a>
+
         <h2>FAQ</h2>
+
         <p>
-        <ul class="unstyled">
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">Is TeSS a repository of materials?</h3>
-                    <div class="faq-answer">
+
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
+                           aria-controls="collapseOne">
+                            Is TeSS a repository of materials?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
                         <p>No. The TeSS is an aggregator of ELIXIR-relevant training information,
                             harvested from individual ELIXIR Nodes and from third-party training content providers.
-                        </p>
-                        <p>
+                        </p><p>
                             TeSS does not store training materials itself, rather it stores links to original
                             training materials and also enables users to create their own <a href="/group">packages</a>
                             and <a href="/workflows">workflows</a> of (linked) materials to suit their needs.
                         </p>
                     </div>
                 </div>
-            </li>
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">What is the main difference between the TeSS and GOBLET’s Training Portal?</h3>
-                    <div class="faq-answer">
-                        TeSS harvests training information from ELIXIR Nodes and from 3-rd party providers, and aggregates that
-                        information according to different ‘views’ (e.g., ELIXIR overview versus node-specific) -
-                        it does not store training materials locally. The GOBLET training portal acts a repository of materials
-                        and courses, and provides a catalogue of and trainers and course organisers. The primary focus of the TeSS
-                        is on ELIXIR resources and Nodes; the principal focus of GOBLET is on its subscribed members and their
-                        materials/courses.
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
+                           aria-expanded="false" aria-controls="collapseTwo">
+                            What is the main difference between the TeSS and GOBLET’s Training Portal?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                        TeSS harvests training information from ELIXIR Nodes and from 3-rd party providers, and
+                        aggregates that information according to different ‘views’ (e.g., ELIXIR overview versus node-specific) -
+                        it does not store training materials locally. The GOBLET training portal acts a repository of
+                        materials and courses, and provides a catalogue of and trainers and course organisers. The primary focus
+                        of the TeSS is on ELIXIR resources and Nodes; the principal focus of GOBLET is on its subscribed members and
+                        their materials/courses.
                     </div>
                 </div>
-            </li>
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">Do I have to upload training materials to TeSS manually?</h3>
-                    <div class="faq-answer">
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingThree">
+                    <h4 class="panel-title">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"
+                           aria-expanded="false" aria-controls="collapseThree">
+                            Do I have to upload training materials to TeSS manually?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div class="panel-body">
                         <p>
-                            Training information is brought into TeSS from various content providers automatically using their APIs (or, where these
+                            Training information is brought into TeSS from various content providers automatically using
+                            their APIs (or, where these
                             do not exist, can be scraped automatically from providers’ websites).
-                        </p>
-                        <p>
+                        </p><p>
                             If you would like your content provider to be added to TeSS,
-                            please contact the TeSS team so we can arrange a scraper for your site. Alternatively, all of these can be manually added and curated
+                            please contact the TeSS team so we can arrange a scraper for your site. Alternatively, all
+                            of these can be manually added and curated
                             by registered users.
                         </p>
                     </div>
                 </div>
-            </li>
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">How can I add a content provider?</h3>
-                    <div class="faq-answer">
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingFour">
+                    <h4 class="panel-title">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour"
+                           aria-expanded="false" aria-controls="collapseFour">
+                            How can I add a content provider?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+                    <div class="panel-body">
                         <p>
-                            Registered users can add a content provider manually from <a href="/organization">content providers page</a>, by clicking
+                            Registered users can add a content provider manually from <a href="/organization">content
+                            providers page</a>, by clicking
                             the 'Add content provider' button. They will be presented with a form to
-                            write a short description, upload the provider's logo and provide a link to provider's website.
-                        </p>
-                        <p>
-                            Alternatively, content provider can be added automatically from a script at the time of ingesting training material content from that provider.
+                            write a short description, upload the provider's logo and provide a link to provider's
+                            website.</p><p>
+                            Alternatively, content provider can be added automatically from a script at the time of
+                            ingesting training material content from that provider.
                         </p>
                     </div>
                 </div>
-            </li>
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">How can I add a training material?</h3>
-                    <div class="faq-answer">
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingFive">
+                    <h4 class="panel-title">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
+                           aria-expanded="false" aria-controls="collapseFive">
+                            How can I add a training material?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                    <div class="panel-body">
                         <p>
-                            Registered users can add training material manually from <a href="/dataset">training materials page</a>,
-                            by clicking the 'Add training material' button. They will be presented with a multi-step form to
-                            fill in various fields and link to resources. They can also attribute this training material to a particular content provider.
-                        </p>
-                        <p>
-                            Alternatively, training material can be added automatically from a script ingesting training material from a particular content provider.
-                            Typically, such a script would use the content provider's API, if such exists, or TeSS development team writes a script that scrapes
+                            Registered users can add training material manually from <a href="/dataset">training
+                            materials page</a>,
+                            by clicking the 'Add training material' button. They will be presented with a multi-step
+                            form to
+                            fill in various fields and link to resources. They can also attribute this training material
+                            to a particular content provider.
+                        </p><p>
+                            Alternatively, training material can be added automatically from a script ingesting training
+                            material from a particular content provider.
+                            Typically, such a script would use the content provider's API, if such exists, or TeSS
+                            development team writes a script that scrapes
                             the training materials off provider's website.
                         </p>
                     </div>
                 </div>
-            </li>
-            <li class="faq-item">
-                <div class="faq-content">
-                    <h3 class="faq-heading">How do I create a package (or a workflow) and add training material it?</h3>
-                    <div class="faq-answer">
-                        <p>
-                            This is a two step process. Firstly, you have to create, say, a package from the <a href="/group">packages</a> pages.
-                            Secondly, you have to add an existing training material to that package (note that one training material can belong to
-                            several packages and/or workflows). This is done by navigating to the page of that particular training material, then
-                            selecting the 'Packages' tab, and selecting the appropriate package from a drop-down list.
-                        </p>
+            </div>
+           <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingSix">
+                    <h4 class="panel-title">
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
+                           aria-expanded="false" aria-controls="collapseSix">
+                            How do I create a package (or a workflow) and add training material it?
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+                    <div class="panel-body">
+                    <p>
+                        This is a two step process. Firstly, you have to create, say, a package from the <a
+                            href="/group">packages</a> pages.
+                        Secondly, you have to add an existing training material to that package (note that one training
+                        material can belong to
+                        several packages and/or workflows). This is done by navigating to the page of that particular
+                        training material, then
+                        selecting the 'Packages' tab, and selecting the appropriate package from a drop-down list.
+                    </p>
                     </div>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
+
+        
         <a name="software"> </a>
+
         <h2>Software</h2>
+
         <p>
-            TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a>, an Open Source Data Portal software.
+            TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a>, an Open Source Data Portal
+            software.
         </p>
+
         <p>
-            TeSS is populated either automatically by scraping content providers for their training materials or by adding materials manually.
+            TeSS is populated either automatically by scraping content providers for their training materials or by
+            adding materials manually.
             Both the TeSS Portal and all the scraping/aggregation
             scripts are open source and are released under the GPL license.
             The source code be found in <a href="https://github.com/ElixirUK">GitHub</a>.
         </p>
+
         <p>
-            Please note that the TeSS at present is in pre-alpha state (as of 21th January 2015). Our first official alpha release is scheduled for the 30th March 2015.
+            Please note that the TeSS at present is in pre-alpha state (as of 21th January 2015). Our first official
+            alpha release is scheduled for the 30th March 2015.
         </p>
         {% endtrans %}
         <a name="trainers"> </a>
+
         <h2>{{ _('Training Coordinators') }}</h2>
 
         {% snippet "home/snippets/training_coordinators.html", training_coordinators=h.training_coordinators() %}
