--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -42,14 +42,13 @@
             By plugging the skills gap we aim to strengthen science across Europe, and will set the agenda for training
             needs in the future.
         </p>
+
+        <br>
         <a name="contact"></a>
-
         <h2>Contact us</h2>
-
         <p>If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>.
-        </p>
-
-        <p>You can also email directly one of the following people (in alphabetical order):</p>
+        </p><p>
+        You can also email directly one of the following people (in alphabetical order):</p>
         <ul>
             <li><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS
                 co-investigator @Manchester)
@@ -61,23 +60,22 @@
             </li>
             <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</li>
         </ul>
-        <a name="faq"> </a>
 
+        <br>
+        <a name="faq"> </a>
         <h2>FAQ</h2>
 
-        <p>
-
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel-group" id="accordionq" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false"
                            aria-controls="collapseOne">
                             Is TeSS a repository of materials?
                         </a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
                         <p>No. The TeSS is an aggregator of ELIXIR-relevant training information,
                             harvested from individual ELIXIR Nodes and from third-party training content providers.
@@ -188,7 +186,7 @@
            <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingSix">
                     <h4 class="panel-title">
-                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
+                        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix"
                            aria-expanded="false" aria-controls="collapseSix">
                             How do I create a package (or a workflow) and add training material it?
                         </a>
@@ -210,31 +208,26 @@
             </div>
         </div>
 
-        
+        <br>
         <a name="software"> </a>
-
         <h2>Software</h2>
-
         <p>
             TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a>, an Open Source Data Portal
             software.
-        </p>
-
-        <p>
+        </p><p>
             TeSS is populated either automatically by scraping content providers for their training materials or by
             adding materials manually.
             Both the TeSS Portal and all the scraping/aggregation
             scripts are open source and are released under the GPL license.
             The source code be found in <a href="https://github.com/ElixirUK">GitHub</a>.
-        </p>
-
-        <p>
+        </p><p>
             Please note that the TeSS at present is in pre-alpha state (as of 21th January 2015). Our first official
             alpha release is scheduled for the 30th March 2015.
         </p>
         {% endtrans %}
-        <a name="trainers"> </a>
 
+        <br>
+        <a name="trainers"> </a>
         <h2>{{ _('Training Coordinators') }}</h2>
 
         {% snippet "home/snippets/training_coordinators.html", training_coordinators=h.training_coordinators() %}
