--- a/ckanext/tess/templates/organization/snippets/organization_form.html
+++ b/ckanext/tess/templates/organization/snippets/organization_form.html
@@ -1,3 +1,5 @@
+{% resource 'tess/verify_url.js' %}
+
 {% import 'macros/form.html' as form %}
 
 <form class="dataset-form form-horizontal" method="post" data-module="basic-form" enctype="multipart/form-data">
@@ -24,7 +26,7 @@
 
     {{ form.image_upload(data, errors, is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }}
 
-    {{ form.input('homepage', label=_('Home page'), id='field-name', placeholder=_('e.g. http://www.mygoblet.org/training-portal'), value=data.homepage, error=errors.homepage, classes=['control-full']) }}
+    {{ form.input('homepage', label=_('Home page'), id='field-homepage', placeholder=_('e.g. http://www.mygoblet.org/training-portal'), value=data.homepage, error=errors.homepage, classes=['control-full']) }}
 
   <div class="control-group">
         <label class="control-label" for="field-elixir_node">{{ _("Member of ELIXIR node") }}</label>
@@ -97,10 +99,10 @@
   <div class="form-actions">
     {% block delete_button %}
       {% if h.check_access('organization_delete', {'id': data.id})  %}
-        {% set locale = h.dump_json({'content': _('Are you sure you want to delete this Organization? This will delete all the public and private datasets belonging to this organization.')}) %}
+        {% set locale = h.dump_json({'content': _('Are you sure you want to delete this content provider? This will delete all the public and private training materials belonging to this content provider.')}) %}
         <a class="btn btn-danger pull-left" href="{% url_for controller='organization', action='delete', id=data.id %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
       {% endif %}
     {% endblock %}
-    <button class="btn btn-primary" name="save" type="submit">{% block save_text %}{{ _('Save Organization') }}{% endblock %}</button>
+    <button class="btn btn-primary" name="save" type="submit" onclick="return check_url_starts_with_http('field-homepage');">{% block save_text %}{{ _('Save content provider') }}{% endblock %}</button>
   </div>
 </form>
