--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -152,7 +152,14 @@
     {{ form.input('twitter', label=_("Twitter handle"), id='twitter', placeholder=("Handle of the node's twitter feed, e.g @ElixirNodeUK"), value=data.twitter, classes=['control-full']) }}
     <hr>
 
-    <div class='controls'><p>Add up to 3 images for the node page's carousel.</p></div>
+    <div class='controls'>
+        Add up to 3 images for the node page's carousel.
+        <span class="info-block info-block-small" style="padding-left: 0px;">
+          <i class="icon-info-sign"></i>
+          If you are providing links to images, make sure the URLs start with http(s)://
+        </span>
+    </div>
+
     {% set carousel_images = [] %}
     {% if data.carousel_image_1: %}
         {% set carousel_images = carousel_images + [data.carousel_image_1] %}
