Tweaks to button names and other UI pieces for datasets/training materials.

--- a/ckanext/tess/templates/package/new_package_form.html
+++ b/ckanext/tess/templates/package/new_package_form.html
@@ -10,7 +10,7 @@
 
 {% block save_button_text %}
   {% if form_style != 'edit' %}
-    {{ super() }}
+    {{ _('Next: Add resources') }}
   {% else %}
     {{ _('Update training material') }}
   {% endif %}
