--- a/ckanext/tess/templates/package/snippets/resource_form.html
+++ b/ckanext/tess/templates/package/snippets/resource_form.html
@@ -35,8 +35,8 @@
 
     {% block basic_fields_format %}
       {% set format_attrs = {'data-module': 'autocomplete', 'data-module-source': '/api/2/util/resource/format_autocomplete?incomplete=?'} %}
-      {% call form.input('format', id='field-format', label=_('Format'), placeholder=_('eg. CSV, XML or JSON'), value=data.format, error=errors.format, classes=['control-medium'], attrs=format_attrs) %}
-        <span class="info-block info-block-small">
+      {% call form.input('format', id='field-format', label=_('Format'), placeholder=_('eg. HTML, CSV, XML or JSON'), value=data.format, error=errors.format, classes=['control-medium'], attrs=format_attrs) %}
+        <span class="info-block info-block-small" style="padding-left: 0px;">
           <i class="icon-info-sign"></i>
           {{ _('Use "HTML" when linking to resources or leave blank.') }}
         </span>
