--- a/ckanext/tess/templates/package/snippets/resource_help.html
+++ b/ckanext/tess/templates/package/snippets/resource_help.html
@@ -1,6 +1,7 @@
 <section class="module module-narrow module-shallow">
   <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What\'s a resource?') }}</h2>
   <div class="module-content">
-    <p>{{ _('A resource can be any document containing useful data. Just provide a URL link to it here.') }}</p>
+    <p>{{ _('A resource can be any document containing information relevant for this training. First and foremost, you should provide
+        a link to the actual training material. You can also add any number of auxiliary or related resources.') }}</p>
   </div>
 </section>
