--- a/ckanext/tess/templates/package/snippets/stages.html
+++ b/ckanext/tess/templates/package/snippets/stages.html
@@ -27,7 +27,7 @@ Example:
   </li>
   <li class="last {{ s2 }}">
     {% if s2 != 'complete' %}
-      <span class="highlight">{{ _('Add training resources') }}</span>
+      <span class="highlight">{{ _('Add resources') }}</span>
     {% else %}
       {% if s1 == 'active' %}
         {# stage 1 #}
