Added calls to new nodes with member observer distinction

--- a/ckanext/tess/templates/node/snippets/node_list_dropdown.html
+++ b/ckanext/tess/templates/node/snippets/node_list_dropdown.html
@@ -9,7 +9,7 @@
       </a>
       <ul class="user-dropdown-menu dropdown-menu pull-left" role="menu">
         <li><a href="/node/custom/hub.html">The Hub</a></li>
-          {% for node in h.get_all_nodes(): %}
+          {% for node in h.get_member_nodes(): %}
             {% set url = h.url_for(node.type ~ '_read', action='read', id=node.name) %}
             <li><a href="{{url}}">{{node.display_name }}</a></li>
           {% endfor %}
