--- a/ckanext/tess/templates/node/snippets/node_item.html
+++ b/ckanext/tess/templates/node/snippets/node_item.html
@@ -18,6 +18,7 @@ Example:
 {% set url = h.url_for(node.type ~ '_read', action='read', id=node.name) %}
 <li class="media-item">
   {% block image %}
+    {{ node.get('country_code') }}
     {% if node.get('country_code'): %}
         <img src="/images/node_flags/{{node.get('country_code')}}-elixir.png" class="img-circle-small" style="max-height:60px;">
         <img style="float: right;" src="/images/node_flags/{{node.get('country_code')}}-small.png">
