Added 2 example workflows.

--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -16,6 +16,13 @@
           </div>
         {% endif %}
       {% endblock %}
+        <div>
+            Have a look at some workflow examples:
+            <ul>
+                <li><a href="/workflow/sequence-analysis-wf.html">Protein sequence analysis workflow</a></li>
+                <li><a href="/workflow/structural-bioinformatics-wf.html">Structural bioinformatics workflow</a></li>
+            </ul>
+        </div>
     </div>
   </section>
 {% endblock %}
