Added banner to distinguish observer nodes

--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -556,3 +556,28 @@ hr.style-one {
     #eeeeee
   );
 }
+
+.node-banner {
+	border-bottom: 20px solid orangered;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	height: 0;
+    display: block;
+    min-width: 50%;
+    left: 99px;
+    top: 37px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform-origin: center center;
+    -moz-transform-origin: center center;
+    -ms-transform-origin: center center;
+    -o-transform-origin: center center;
+    transform-origin: center center;
+    position: absolute;
+    color: #ffffff;
+    font-size: 11px;
+    text-align: center;
+}
