Use member status variable rather than hard coding incase we start to show 'interested' nodes

--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -24,7 +24,7 @@
             {% endif %}
         </div>
         {% if node.member_status != 'Member' %}
-            <h2 style="margin-left:130px">[{{ _('Observer Node') }}]</h2>
+            <h2 style="margin-left:130px">[{{ node.member_status }} Node]</h2>
         {% endif %}
         {% if node.state == 'deleted' %}
         <div style="float: left; width: 60%;">
